--- a/store/templates/store/box_pdf.html
+++ b/store/templates/store/box_pdf.html
@@ -115,7 +115,7 @@ h1 {
     <div class="logo-container">
         <img class="logo-image" src="{% static "images/logo.jpg" %}" alt="">
     </div>
-    <h1> NOHD {{f.unit}} PHARMACY EXPIRED AND DAMAGED REPORT</h1>
+    <h1> NOHD PHARMACY EXPIRED AND DAMAGED REPORT</h1>
     <div class="result">
       {{ result|upper }}
     </div>
