box using Q as filter and pdf

--- a/store/templates/store/unit_box.html
+++ b/store/templates/store/unit_box.html
@@ -16,10 +16,6 @@
            class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-rose-600 hover:bg-rose-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-rose-500">
             <i class="fas fa-plus mr-2"></i> Move drugs to box
             </a>
-            <a href="{% url 'box_report' store.pk %}"
-            class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
-                <i class="fas fa-file-pdf mr-2 fa-2xl"></i> Box Report
-                </a>
 
                                                 <!-- Search Form -->
                                                 <form method="get" class="flex flex-col sm:flex-row items-center space-y-2 sm:space-y-0 sm:space-x-2 ">
@@ -35,12 +31,13 @@
                                                     <a href="?" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-amber-500 hover:bg-amber-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-amber-500">
                                                         <i class="fas fa-rotate"></i>
                                                     </a>
+                                                    <a href="{% url 'box_pdf' pk=object.pk %}{% if request.GET.q %}?q={{ request.GET.q }}{% endif %}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-rose-600 hover:bg-rose-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-rose-500">
+                                                        <i class="fa-solid fa-file-pdf"></i>
+                                                    </a>
+    
                                                     {% endif %}
                                         
                                                 </form>
-                                                <a href="{% url 'box_pdf' pk=object.pk %}{% if request.GET.q %}?q={{ request.GET.q }}{% endif %}" class="...">
-                                                    <i class="fa-solid fa-file-pdf mr-2"></i> Generate PDF
-                                                </a>
             </div>
         <!-- Unit Issue Records Table -->
         <div class="mt-4 bg-white shadow overflow-hidden sm:rounded-lg">
