--- a/store/templates/store/record.html
+++ b/store/templates/store/record.html
@@ -53,6 +53,7 @@
                         <th scope="col" class="p-1 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Supplier</th>
                         <th scope="col" class="p-1 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Unit Issued To</th>
                         <th scope="col" class="p-1 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Cost Price</th>
+                        <th scope="col" class="p-1 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Selling Price</th>
                         <th scope="col" class="p-1 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">QTY</th>
                         <th scope="col" class="p-1 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">edit</th>
                     </tr>
@@ -71,6 +72,7 @@
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.drug.supplier|default_if_none:'N/A'|upper }}</td>
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.unit_issued_to|default_if_none:'N/A' }}</td>
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.drug.cost_price|default_if_none:'N/A' }}</td>
+                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.drug.selling_price|default_if_none:'N/A' }}</td>
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.quantity|default_if_none:'N/A' }}</td>
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500 text-center"><a href="{% url 'update_record' r.id %}"><i class="fa fa-solid fa-edit fa-lg text-amber-600"></i></a></td>
                     </tr>
