--- a/store/templates/store/unit_bulk_locker.html
+++ b/store/templates/store/unit_bulk_locker.html
@@ -60,6 +60,7 @@
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Strength</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Trade Drug</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Cost Price</th>
+                            <th scope="col" class="px-4 py-2 font-medium tracking-wider">Selling Price</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Balance QTY</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Total Value</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Initial Expiry Date</th>
@@ -76,6 +77,7 @@
                             <td class="px-4 py-2 font-medium text-gray-800">{{ i.drug.strength|default_if_none:'N/A'|upper }}</td>
                             <td class="px-4 py-2 font-medium text-gray-800">{{ i.drug.trade_name|default_if_none:'N/A'|upper }}</td>
                             <td class="px-4 py-2 font-medium text-gray-800">&#x20A6;{{ i.drug.cost_price|default_if_none:'N/A'|upper }}</td>
+                            <td class="px-4 py-2 font-medium text-gray-800">&#x20A6;{{ i.drug.selling_price|default_if_none:'N/A'|upper }}</td>
                             <td class="px-4 py-2 font-medium text-gray-800">{{ i.quantity|default_if_none:''|upper }}</td>
                             <td class="px-4 py-2 font-medium text-gray-800">&#x20A6;{{ i.total_value|floatformat:2|intcomma }}</td>
                             <td class="px-4 py-2 font-medium 
